plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.6'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.agencia.viajes'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

configurations.configureEach {
	resolutionStrategy {
		dependencySubstitution {
			substitute module('org.yaml:snakeyaml') using module('org.yaml:snakeyaml:1.33')
		}
	}
}

dependencies {
	implementation platform('software.amazon.awssdk:bom:2.29.45')
	implementation 'software.amazon.awssdk:dynamodb'
	implementation 'software.amazon.awssdk:dynamodb-enhanced'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-graphql'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'com.github.javafaker:javafaker:1.0.2'
	implementation 'org.springframework.boot:spring-boot-starter-flyway'
	implementation 'org.flywaydb:flyway-database-postgresql'
	implementation 'me.paulschwarz:spring-dotenv:4.0.0'
	implementation 'io.github.resilience4j:resilience4j-spring-boot3:2.2.0'
	implementation 'org.springframework.boot:spring-boot-starter-aspectj'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-validation-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	testCompileOnly 'org.projectlombok:lombok'
	runtimeOnly 'com.h2database:h2'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.wiremock:wiremock-standalone:3.3.1'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.graphql:spring-graphql-test'
}

tasks.named('test') {
	useJUnitPlatform()
}

task cleanDatabase {
	doLast {
		def urls = configurations.runtimeClasspath.files.collect { it.toURI().toURL() }
		def classLoader = new java.net.URLClassLoader(urls as java.net.URL[])
		def driverClass = classLoader.loadClass("org.postgresql.Driver")
		def driver = driverClass.getDeclaredConstructor().newInstance()
		def props = new java.util.Properties()
		props.setProperty("user", System.getenv("DB_USERNAME") ?: "postgres")
		props.setProperty("password", System.getenv("DB_PASSWORD") ?: "")
		def dbUrl = System.getenv("DB_URL") ?: "jdbc:postgresql://localhost:5432/core_transaccional_db"
		def conn = driver.connect(dbUrl, props)
		def stmt = conn.createStatement()
		stmt.execute("DROP SCHEMA public CASCADE; CREATE SCHEMA public;")
		stmt.close()
		conn.close()
		println "Database schema cleaned successfully!"
	}
}
